--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal - Parceiros Prompt</title>
+    <title>Portal Prompt</title>
     <!-- Ícones Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -261,21 +261,15 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="processos.html" class="nav-link">
-                    <i class="nav-icon fas fa-chart-line"></i>
-                    Processos
+                <a href="vagas.html" class="nav-link">
+                    <i class="nav-icon fas fa-briefcase"></i>
+                    Vagas Abertas
                 </a>
             </li>
             <li class="nav-item">
-                <a href="documentos.html" class="nav-link">
-                    <i class="nav-icon fas fa-folder"></i>
-                    Documentos
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="chamados.html" class="nav-link">
-                    <i class="nav-icon fas fa-ticket-alt"></i>
-                    Chamados
+                <a href="contatos.html" class="nav-link">
+                    <i class="nav-icon fas fa-address-book"></i>
+                    Contatos
                 </a>
             </li>
         </ul>
