--- a/funcionarios.html
+++ b/funcionarios.html
@@ -274,6 +274,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
             user-select: none;
+            white-space: nowrap;
         }
 
         .employees-table th:hover {
@@ -597,7 +598,7 @@
         <!-- Employees Section -->
         <section class="employees-section">
             <div class="section-header">
-                <h2 id="sectionTitle">Lista de Funcionários - <span id="empresaNome">AEROVIP</span></h2>
+                <h2 id="sectionTitle">Lista de Funcionários - <span id="empresaNome">SUA EMPRESA</span></h2>
                 <div class="search-box">
                     <input type="text" class="search-input" id="searchInput" placeholder="Buscar funcionário...">
                 </div>
